fixing whitespace mobile and bottom navigation

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -122,6 +122,7 @@ a {
 @media (max-width: 500px) {
     main {
         max-width: 100vw;
+        overflow-x: hidden;
     }
 }
 
